Looks like a typo in the header ;)  change HOMIE to HOME

--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -10,7 +10,7 @@
 			<li>
 				<a href ui-sref="projects">
 					<span class="glyphicon glyphicon-home"></span>
-					<span>HOMIE</span>
+					<span>HOME</span>
 				</a>
 			</li>
 			<li ng-if="ENV === 'EAO'" class="dashboard-item" ng-show="authentication.user">
