--- a/modules/projects/client/views/projects.abstract.html
+++ b/modules/projects/client/views/projects.abstract.html
@@ -40,8 +40,10 @@
 							<div class="panel panel-default news-feed">
 								<div class="panel-heading"><h2>News & Announcements</h2></div>
 								<div class="panel-body">
-								<tmpl-permissions-gear x-context="Application" x-object="Application"></tmpl-permissions-gear>
-								<tmpl-roles-gear x-context="Application"></tmpl-roles-gear>
+									<div ng-if="authentication.user">
+										<tmpl-permissions-gear x-context="Application" x-object="Application"></tmpl-permissions-gear>
+										<tmpl-roles-gear x-context="Application"></tmpl-roles-gear>
+									</div>
 									<tmpl-recent-activity id="anchor-recent" x-form="form"></tmpl-recent-activity>
 								</div>
 								<div class="panel-footer">
