--- a/modules/projects/client/views/projects-partials/projects-list.html
+++ b/modules/projects/client/views/projects-partials/projects-list.html
@@ -3,12 +3,12 @@
 	<div class="panel-heading clearfix">
 		<h2 class="pull-left" ng-show="environment === 'EAO' && title !== 'no'">List of Environmental Assessments</h2>
 		<h2 class="pull-left" ng-show="environment === 'MEM' && title !== 'no'">Mining Projects</h2>
-		<div class="pull-right">
+		<div class="pull-right hidden">
 			<show-filter x-toggle-filter="toggleFilter"></show-filter>
 		</div>
 	</div>
 	
-	<table x-show-filter="toggleFilter" ng-table="projectList.tableParams" class="projects-table table table-striped">
+	<table x-show-filter="true" ng-table="projectList.tableParams" class="projects-table table table-striped">
 		<tr ng-repeat="o in $data" class='clickable' ui-sref="p.detail({projectid: o.code})">
 			<td header-class="'name-col'" data-title="'Name'" filter="{'name':'text'}" sortable="'name'">
 				{{o.name}}
