made changes to further accommodate new dbmodels. added role chooser to PCP interface, can be used wherever. cleanup some spelling mistakes found

--- a/modules/core/client/views/403.client.view.html
+++ b/modules/core/client/views/403.client.view.html
@@ -3,6 +3,6 @@
 		<h1>Permission Denied</h1>
 	</div>
 	<div class="view-body-container">
-		<p>You don not have the correct permissions to access this page.</p>	
+		<p>You do not have the correct permissions to access this page.</p>
 	</div>
 </div>
