--- a/modules/project-comments/client/views/public-comments/detail.html
+++ b/modules/project-comments/client/views/public-comments/detail.html
@@ -7,12 +7,8 @@
 </div>
 <div class="modal-body">
 
-    <div>
-        <input type="checkbox" ng-model="isPublic">Public</input><input type="checkbox" ng-model="isEao">EAO</input><input type="checkbox" ng-model="isProponent">Proponent</input>
-    </div>
-
     <!-- COMMENT NOTE ALERTS -->
- 	<div class="eao-alerts" ng-if="isEao">
+ 	<div class="eao-alerts" ng-if="period.userCan.vetComments">
 
         <!-- DEFERRAL NOTES -->
         <div class="alert alert-info eao-comment-notes" ng-if="comment.eaoStatus === 'Deferred' && comment.eaoNotes">
@@ -48,7 +44,7 @@
     </section><!-- / COMMENT INFO -->
 
 	<!-- ASSIGN PILLARS & VC'S -->
-    <section class="pillers-vc" ng-if="isProponent">
+    <section class="pillers-vc" ng-if="period.userCan.classifyComments">
     	<button
     		x-vc-chooser
     		x-project="project"
@@ -73,7 +69,7 @@
     </section><!-- / PILLARS & VC'S -->
 
     <!-- ATTACHMENTS -->
-    <section ng-if="isPublic || isProponent">
+    <section ng-if="!period.userCan.vetComments">
         <label class="control-label">Attachments</label>
         <div class="attachments list-group">
             <a class="list-group-item">
@@ -92,7 +88,7 @@
     </section><!-- / ATTACHMENTS -->
 
     <!-- REVIEW ATTACHMENTS -->
-    <section ng-if="isEao">
+    <section ng-if="period.userCan.vetComments">
         <label class="control-label">Review Attachments</label>
         <ul class="attachments list-group">
             <li class="list-group-item clearfix">
@@ -141,7 +137,7 @@
     </section><!-- / REVIEW ATTACHMENTS -->
 
     <!-- SET COMMENT STATUS -->
-    <section class="comment-status" ng-if="isEao">
+    <section class="comment-status" ng-if="period.userCan.vetComments">
         <div class="form-group">
             <label class="control-label">Set Comment Status</label>
             <div class="comment-status-btns btn-group">
