--- a/modules/project-comments/client/views/public-comments/list.html
+++ b/modules/project-comments/client/views/public-comments/list.html
@@ -1,14 +1,16 @@
 <div>
-    <div ng-if="s.isEao">
+    <div ng-if="s.period.userCan.vetComments">
         <!-- PROTOTYPE EAO ROW TEMPLATES  -->
         <ul class="tab-container nav nav-tabs" role="tablist">
-           <li role="presentation" class="active"><a href ng-click="s.toggle('Unvetted')"  role="tab" data-toggle="tab">Pending Review ({{s.totalPending}})</a></li>
-           <li role="presentation"><a href ng-click="s.toggle('Deferred')"  role="tab" data-toggle="tab">Deferred ({{s.totalDeferred}})</a></li>
-           <li role="presentation"><a href ng-click="s.toggle('Published')" role="tab" data-toggle="tab">Published ({{s.totalPublic}})</a></li>
-           <li role="presentation"><a href ng-click="s.toggle('Rejected')"  role="tab" data-toggle="tab">Rejected ({{s.totalRejected}})</a></li>
-       </ul>
+            <li role="presentation" class="active"><a href ng-click="s.toggle('Unvetted')"  role="tab" data-toggle="tab">Pending Review ({{s.totalPending}})</a></li>
+            <li role="presentation"><a href ng-click="s.toggle('Deferred')"  role="tab" data-toggle="tab">Deferred ({{s.totalDeferred}})</a></li>
+            <li role="presentation"><a href ng-click="s.toggle('Published')" role="tab" data-toggle="tab">Published ({{s.totalPublic}})</a></li>
+            <li role="presentation"><a href ng-click="s.toggle('Rejected')"  role="tab" data-toggle="tab">Rejected ({{s.totalRejected}})</a></li>
+ <!--            <li ng-if="s.period.userCan.classifyComments" role="presentation" class="active"><a href role="tab" data-toggle="tab" ng-click="s.toggle('Unclassified')">Unassigned ({{s.totalUnassigned}})</a></li>
+            <li ng-if="s.period.userCan.classifyComments" role="presentation"><a href role="tab" data-toggle="tab" ng-click="s.toggle('Classified')">Assigned ({{s.totalAssigned}})</a></li>
+ -->       </ul>
     </div>
-    <div ng-if="s.isProponent">
+    <div ng-if="s.period.userCan.classifyComments && !s.period.userCan.vetComments">
         <!-- PROPONENT TEMPLATES  -->
         <ul class="tab-container nav nav-tabs" role="tablist">
             <li role="presentation" class="active"><a href role="tab" data-toggle="tab" ng-click="s.toggleP('Unclassified')">Unassigned ({{s.totalUnassigned}})</a></li>
@@ -52,10 +54,4 @@
     </div>
     <!-- / EAO ROW TEMPLATES  -->
 </div>
-<!-- <div>
-<input type="checkbox" ng-model="s.isPublic">Public</input><br/>
-<input type="checkbox" ng-model="s.isEao">EAO</input><br/>
-<input type="checkbox" ng-model="s.isProponent">Proponent</input>
-</div>
- -->
 
