--- a/modules/project-comments/client/views/period-edit.html
+++ b/modules/project-comments/client/views/period-edit.html
@@ -93,7 +93,7 @@
 				</div>
 			</div>
 			<div class="col-sm-6">
-				<label class="control-label">Instructions to Working Group</label>
+				<label class="control-label">Instructions to Commenters</label>
 				<textarea rows="6" ng-model="period.instructions" class="form-control"></textarea>
 			</div>
 
