added management of open houses and deleted some unused files

--- a/modules/project-comments/client/views/public-comments/main.html
+++ b/modules/project-comments/client/views/public-comments/main.html
@@ -28,9 +28,12 @@
 
             <div class="open-house-dates">
                 <h4>Open House Dates</h4>
-                <ul>
-                    <li>June 15th, 2016 at Some Location</li>
-                    <li>July 10th, 2016 at Some Location</li>
+                <ul class="list-unstyled">
+                    <li ng-repeat="h in period.openHouses">
+                        <b>{{ h.eventDate | amDateFormat:'MMM Do YYYY' }}</b>
+                        <br/>
+                        <pre class="col-xs-offset-1">{{ h.description }}</pre>
+                    </li>
                 </ul>
             </div>
         </div>
