--- a/modules/project-comments/client/views/period-edit.html
+++ b/modules/project-comments/client/views/period-edit.html
@@ -93,8 +93,22 @@
 				</div>
 			</div>
 			<div class="col-sm-6">
+				<div class="row">
 				<label class="control-label">Instructions to Commenters</label>
 				<textarea rows="6" ng-model="period.instructions" class="form-control"></textarea>
+				</div>
+				<div class="row">
+				<label class="control-label">Open Houses &nbsp; <a x-edit-open-house x-period="period" x-mode="add"><i class="glyphicon glyphicon-plus"></i></a></label>
+				<ul class="list-unstyled">
+					<li ng-repeat="h in period.openHouses">
+						<b>{{ h.eventDate | amDateFormat:'MMM Do YYYY' }}</b>
+						&nbsp; <a x-edit-open-house x-period="period" x-mode="edit" x-openhouse="h"><i class="glyphicon glyphicon-pencil"></i></a>
+						&nbsp; <a x-edit-open-house x-period="period" x-mode="delete" x-index="$index"><i class="glyphicon glyphicon-trash"></i></a>
+						<br/>
+						<pre class="col-xs-offset-1">{{ h.description }}</pre>
+					</li>
+				</ul>
+				</div>
 			</div>
 
 		</div>
