--- a/modules/core/client/views/add-user-context-gear.html
+++ b/modules/core/client/views/add-user-context-gear.html
@@ -1,1 +1,1 @@
-<a class="btn btn-link btn-xs" x-add-user-to-context-modal x-context="context" x-role="role"><i class="glyphicon glyphicon-plus"></i> Add User to Context</a>
+<a class="btn btn-link btn-sm" x-add-user-to-context-modal x-context="context" x-role="role">+ Add User to Project</a>
