--- a/modules/core/client/views/role-users-modal.html
+++ b/modules/core/client/views/role-users-modal.html
@@ -1,28 +1,38 @@
 <div class="modal-header">
-	<h3 class="modal-title">Roles for {{s.name}}</h3>
-	<tmpl-role-new context="s.context"></tmpl-role-new>
-	<tmpl-add-user-to-context context="s.context" role="s.defaultRole" ng-if="s.context.code !== 'application'"></tmpl-add-user-to-context>
+	<button class="btn btn-default close" ng-click="s.cancel()"><span aria-hidden="true">×</span></button>
+	<h3 class="modal-title">Edit Roles &nbsp;&rsaquo;&nbsp; {{s.name}}</h3>
 </div>
+
 <div class="modal-body">
+	
+	<!-- TABS -->
 	<ul class="tab-container nav nav-tabs" role="tablist">
-		<li role="presentation" class="active"><a href ng-click="s.userView = !s.userView"  role="tab" data-toggle="tab">User View</a></li>
-		<li role="presentation"><a href ng-click="s.userView = !s.userView"  role="tab" data-toggle="tab">Role View</a></li>
-	</ul>
+		<li role="presentation" class="active"><a href ng-click="s.userView = !s.userView"  role="tab" data-toggle="tab">By User</a></li>
+		<li role="presentation"><a href ng-click="s.userView = !s.userView"  role="tab" data-toggle="tab">By Roles</a></li>
+	</ul><!-- / TABS -->
+
+	<!-- SET BY USERS -->
 	<div class="tab-pane" ng-show="s.userView">
-		<div class="panel panel-default">
-			<div class="form-group">
-				<label for="user" class="control-label">User</label>
-				<select id="user" ng-model="s.currentUser" class="form-control input-sm" ng-options="p as p for p in s.allUsers"></select>
+		<div class="form-group select-permission">
+			<label>Select User</label>
+			<div class="flex-row">
+				<select class="form-control" id="user" ng-model="s.currentUser" ng-options="p as p for p in s.allUsers | orderBy"></select>
+				<tmpl-add-user-to-context context="s.context" role="s.defaultRole" ng-if="s.context.code !== 'application'"></tmpl-add-user-to-context>
 			</div>
-			<ul>
-				<li ng-repeat="role in s.allRoles">
-
-					<div class="checkbox control-with-label">
-						<label for="multiple">
+		</div>
+		<div class="flex-row">
+			<label>Manage Roles for User</label>
+			<tmpl-role-new context="s.context" class="new-role-btn"></tmpl-role-new>
+		</div>
+		<div class="panel panel-default">
+			<ul class="list-group">
+				<li class="list-group-item" ng-repeat="role in s.allRoles">
+					<div class="checkbox">
+						<label>
 							<input type="checkbox"
-							ng-change="s.clickRole(s.currentUser, role, s.userRoleIndex.user[s.currentUser][role])"
-							ng-model="s.userRoleIndex.user[s.currentUser][role]" >
-							{{ role }}
+								ng-change="s.clickRole(s.currentUser, role, s.userRoleIndex.user[s.currentUser][role])"
+								ng-model="s.userRoleIndex.user[s.currentUser][role]">
+								{{ role }}
 							</input>
 						</label>
 					</div>
@@ -30,29 +40,39 @@
 			</ul>
 		</div>
 	</div>
+
+	<!-- SET BY ROLE -->
 	<div class="tab-pane" ng-show="!s.userView">
-		<div class="panel panel-default">
-			<div class="form-group">
-				<label for="role" class="control-label">Role</label>
-				<select id="role" ng-model="s.currentRole" class="form-control input-sm" ng-options="p as p for p in s.allRoles"></select>
+		<div class="form-group select-permission">
+			<label for="role">Select Role</label>
+			<div class="flex-row">
+				<select class="form-control" id="role" ng-model="s.currentRole" ng-options="p as p for p in s.allRoles | orderBy"></select>
+				<tmpl-role-new context="s.context"></tmpl-role-new>
 			</div>
-			<ul>
-				<li ng-repeat="user in s.allUsers">
-
-					<div class="checkbox control-with-label">
-						<label for="multiple">
+		</div>
+		<div class="flex-row">
+			<label class="control-label">Manage Users for Role</label>
+			<tmpl-add-user-to-context class="new-role-btn" context="s.context" role="s.defaultRole" ng-if="s.context.code !== 'application'"></tmpl-add-user-to-context>
+		</div>
+		<div class="panel panel-default">
+			<ul class="list-group">
+				<li class="list-group-item" ng-repeat="user in s.allUsers">
+					<div class="checkbox">
+						<label>
 							<input type="checkbox"
-							ng-change="s.clickUser(user, s.currentRole, s.userRoleIndex.role[s.currentRole][user])"
-							ng-model="s.userRoleIndex.role[s.currentRole][user]" >
-							{{ user }}
+								ng-change="s.clickUser(user, s.currentRole, s.userRoleIndex.role[s.currentRole][user])"
+								ng-model="s.userRoleIndex.role[s.currentRole][user]" >
+								{{ user }}
 							</input>
 						</label>
 					</div>
 				</li>
 			</ul>
 		</div>
-	</div>
+	</div><!-- SET BY ROLE -->
+
 </div>
+
 <div class="modal-footer">
 	<button class="btn btn-default" ng-click="s.cancel()">Cancel</button>
 	<button class="btn btn-primary" ng-click="s.ok()">OK</button>
