--- a/modules/core/client/views/add-user-context-modal.html
+++ b/modules/core/client/views/add-user-context-modal.html
@@ -1,16 +1,13 @@
 <div class="modal-header">
-	<h3 class="modal-title">Define New Role for {{s.name}}</h3>
+	<button class="btn btn-default close" ng-click="s.cancel()"><span aria-hidden="true">×</span></button>
+	<h3 class="modal-title">Add User to Project &nbsp;&rsaquo;&nbsp; {{s.name}}</h3>
 </div>
+
 <div class="modal-body">
-	<div class="panel panel-default">
-		<div class="form-group">
-			<div class="form-group">
-				<label for="user" class="control-label">User</label>
-				<select id="user" ng-model="s.currentUser" class="form-control input-sm" ng-options="p.username as p.displayName for p in s.allUsers"></select>
-			</div>
-		</div>
-	</div>
+	<label for="user">Select a User</label>
+	<select class="form-control" id="user" ng-model="s.currentUser" ng-options="p.username as p.displayName for p in s.allUsers"></select>
 </div>
+
 <div class="modal-footer">
 	<button class="btn btn-default" ng-click="s.cancel()">Cancel</button>
 	<button class="btn btn-primary" ng-click="s.ok()">OK</button>
