--- a/modules/core/client/views/role-permissions-modal.html
+++ b/modules/core/client/views/role-permissions-modal.html
@@ -1,45 +1,62 @@
 <div class="modal-header">
-	<h3 class="modal-title">Permissions for {{s.name}}</h3>
-	<tmpl-role-new context="s.context"></tmpl-role-new>
+	<button class="btn btn-default close" ng-click="s.cancel()"><span aria-hidden="true">×</span></button>
+	<h3 class="modal-title">Edit Permissions &nbsp;&rsaquo;&nbsp; {{s.name}}</h3>
 </div>
-<div class="modal-body">
-	<ul class="tab-container nav nav-tabs" role="tablist">
-		<li role="presentation" class="active"><a href ng-click="s.permissionView = !s.permissionView"  role="tab" data-toggle="tab">Permission View</a></li>
-		<li role="presentation"><a href ng-click="s.permissionView = !s.permissionView"  role="tab" data-toggle="tab">Role View</a></li>
-	</ul>
-	<div class="tab-pane" ng-show="s.permissionView">
-		<div class="panel panel-default">
-			<div class="form-group">
-				<label for="permission" class="control-label">Permission</label>
-				<select id="permission" ng-model="s.currentPermission" class="form-control input-sm" ng-options="p as p for p in s.allPermissions"></select>
-			</div>
-			<ul class="list-unstyled">
-				<li  ng-repeat="role in s.allRoles">
 
-					<div class="checkbox control-with-label">
-						<label for="multiple">
+<div class="modal-body">
+	
+	<!-- TABS -->
+	<ul class="tab-container nav nav-tabs" role="tablist">
+		<li class="active" role="presentation">
+			<a href ng-click="s.permissionView = !s.permissionView" role="tab" data-toggle="tab">by Permission</a>
+		</li>
+		<li role="presentation">
+			<a href ng-click="s.permissionView = !s.permissionView" role="tab" data-toggle="tab">by Role</a>
+		</li>
+	</ul><!-- / TABS -->
+
+	<!-- SET BY ACTION -->
+	<div class="tab-pane" ng-show="s.permissionView">
+		<div class="form-group select-permission">
+			<label>Select Permission</label>
+			<select class="form-control" id="permission" ng-model="s.currentPermission" ng-options="p as p for p in s.allPermissions"></select>
+		</div>
+		<div class="flex-row">
+			<label>Manage Roles for Permission</label>
+			<tmpl-role-new context="s.context" class="new-role-btn"></tmpl-role-new>
+		</div>
+		<div class="panel panel-default">
+			<ul class="list-group">
+				<li class="list-group-item" ng-repeat="role in s.allRoles | orderBy">
+					<div class="checkbox">
+						<label>
 							<input type="checkbox"
-							ng-change="s.clickRole(s.currentPermission, role, s.permissionRoleIndex.permission[s.currentPermission][role])"
-							ng-model="s.permissionRoleIndex.permission[s.currentPermission][role]" >
-							{{ role }}
+								ng-change="s.clickRole(s.currentPermission, role, s.permissionRoleIndex.permission[s.currentPermission][role])"
+								ng-model="s.permissionRoleIndex.permission[s.currentPermission][role]" >
+								{{ role }}
 							</input>
 						</label>
 					</div>
 				</li>
 			</ul>
 		</div>
-	</div>
-	<div class="tab-pane" ng-show="!s.permissionView">
-		<div class="panel panel-default">
-			<div class="form-group">
-				<label for="role" class="control-label">Role</label>
-				<select id="role" ng-model="s.currentRole" class="form-control input-sm" ng-options="p as p for p in s.allRoles"></select>
-			</div>
-			<ul class="list-unstyled">
-				<li ng-repeat="permission in s.allPermissions">
+	</div><!-- / SET BY ACTION -->
 
-					<div class="checkbox control-with-label">
-						<label for="multiple">
+	<!-- SET BY ROLE -->
+	<div class="tab-pane" ng-show="!s.permissionView">
+		<div class="form-group select-permission">
+			<label>Select Role</label>
+			<div class="flex-row">
+				<select class="form-control" id="role" ng-model="s.currentRole" ng-options="p as p for p in s.allRoles"></select>
+				<tmpl-role-new context="s.context"></tmpl-role-new>
+			</div>
+		</div>
+		<label>Manage Permissions for Role</label>
+		<div class="panel panel-default">
+			<ul class="list-group">
+				<li class="list-group-item" ng-repeat="permission in s.allPermissions | orderBy">
+					<div class="checkbox">
+						<label>
 							<input type="checkbox"
 							ng-change="s.clickPermission(permission, s.currentRole, s.permissionRoleIndex.role[s.currentRole][permission])"
 							ng-model="s.permissionRoleIndex.role[s.currentRole][permission]" >
@@ -50,7 +67,8 @@
 				</li>
 			</ul>
 		</div>
-	</div>
+	</div><!-- / SET BY ROLE -->
+
 </div>
 <div class="modal-footer">
 	<button class="btn btn-default" ng-click="s.cancel()">Cancel</button>
