--- a/modules/core/client/views/role-new-gear.html
+++ b/modules/core/client/views/role-new-gear.html
@@ -1,1 +1,1 @@
-<a class="btn btn-link btn-sm" x-role-new-modal x-context="context">+ New Role</a>
+<a ng-if="context.userCan.createRole" class="btn btn-link btn-sm" x-role-new-modal x-context="context">+ New Role</a>
