--- a/modules/core/client/views/role-permissions-modal.html
+++ b/modules/core/client/views/role-permissions-modal.html
@@ -4,7 +4,7 @@
 </div>
 
 <div class="modal-body">
-	
+
 	<!-- TABS -->
 	<ul class="tab-container nav nav-tabs" role="tablist">
 		<li class="active" role="presentation">
@@ -23,7 +23,7 @@
 		</div>
 		<div class="flex-row">
 			<label>Manage Roles for Permission</label>
-			<tmpl-role-new context="s.context" class="new-role-btn"></tmpl-role-new>
+			<tmpl-role-new context="s.context" class="new-role-btn" ng-if="s.context.userCan.createRole"></tmpl-role-new>
 		</div>
 		<div class="panel panel-default">
 			<ul class="list-group">
@@ -48,7 +48,7 @@
 			<label>Select Role</label>
 			<div class="flex-row">
 				<select class="form-control" id="role" ng-model="s.currentRole" ng-options="p as p for p in s.allRoles"></select>
-				<tmpl-role-new context="s.context"></tmpl-role-new>
+				<tmpl-role-new context="s.context" ng-if="s.context.userCan.createRole"></tmpl-role-new>
 			</div>
 		</div>
 		<label>Manage Permissions for Role</label>
