--- a/modules/core/client/views/role-permissions-gear.html
+++ b/modules/core/client/views/role-permissions-gear.html
@@ -1,1 +1,1 @@
-<a class="btn btn-link btn-sm" x-role-permissions-modal x-context="context" x-object="object"><i class="glyphicon glyphicon-cog"></i></a>
+<a ng-if="context.userCan.managePermissions" class="btn btn-link btn-sm" x-role-permissions-modal x-context="context" x-object="object"><i class="glyphicon glyphicon-cog"></i></a>
