--- a/modules/core/client/views/role-users-gear.html
+++ b/modules/core/client/views/role-users-gear.html
@@ -1,1 +1,1 @@
-<a class="btn btn-link btn-sm" x-role-users-modal x-context="context"><i class="glyphicon glyphicon-user"></i></a>
+<a ng-if="context.userCan.manageRoles" class="btn btn-link btn-sm" x-role-users-modal x-context="context"><i class="glyphicon glyphicon-user"></i></a>
